Fix CSS display

--- a/public/index.html
+++ b/public/index.html
@@ -10,10 +10,10 @@
 </head>
 
 <body>
-    <!-- <div class="mouse"></div> -->
     <div id="chat">
-        <div id="displayMessages"></div>
-        <!-- <canvas id="canvas" height="600px" width="600px"></canvas> -->
+        <div id="messagesWrapper">
+            <div id="displayMessages"></div>
+        </div>
         <div id="forms">
             <form action="" id="textForm">
                 <input type="text" autofocus>
